Fixed contact layout on small screens

--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,7 @@ p {
 ul,
 li {
   list-style: none;
+  padding: 5px;
 }
 form {
   color: var(--primary-color);
@@ -137,11 +138,14 @@ footer {
   color: var(--primary-color);
 }
 .contacts {
-  padding-left: 5px;
-  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  display: block;
+  margin: 0 auto;
+  /* display: inline-flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   text-align: left;
   color: var(--secondary-color);
 }
